--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.9",
     "firebase": "^11.8.1",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.546.0",
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
